--- a/package.json
+++ b/package.json
@@ -6,24 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "seed": "ts-node --transpileOnly server/mongodb/seed.ts",
     "format": "prettier --write ."
   },
   "dependencies": {
     "@chakra-ui/react": "^2.2.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@types/mongodb": "^4.0.7",
+    "argon2": "^0.28.7",
     "framer-motion": "^6",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.7.0",
     "next": "12.2.2",
-    "prettier": "^2.7.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zustand": "4.0.0-rc.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "dotenv": "^16.0.1",
+    "prettier": "^2.7.1",
+    "ts-node": "^10.8.2",
     "typescript": "4.7.4"
   }
 }
