--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "prod": "pnpm build && pnpm start",
     "seed": "ts-node --transpileOnly server/mongodb/seed.ts",
     "format": "prettier --write ."
   },
@@ -18,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.7.0",
     "next": "12.2.2",
+    "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zustand": "4.0.0-rc.1"
