--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.2.4",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
+    "@chakra-ui/react": "^2.2.6",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "argon2": "^0.28.7",
-    "framer-motion": "^6.5.1",
+    "framer-motion": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.8.0",
-    "next": "12.2.3",
+    "mongodb": "^4.8.1",
+    "next": "12.2.4",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zustand": "4.0.0-rc.4"
+    "zustand": "4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.9",
+    "@babel/core": "^7.18.10",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "18.0.6",
+    "@types/node": "18.6.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "dotenv": "^16.0.1",
