--- a/package.json
+++ b/package.json
@@ -11,28 +11,29 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.2.8",
+    "@chakra-ui/react": "^2.2.9",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
-    "argon2": "^0.28.7",
-    "framer-motion": "^7.1.0",
+    "argon2": "^0.29.1",
+    "framer-motion": "^7.2.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.8.1",
+    "mongodb": "^4.9.0",
     "next": "12.2.5",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zustand": "4.0.0"
+    "zustand": "4.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.10",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "18.7.3",
+    "@babel/core": "^7.18.13",
+    "@chakra-ui/styled-system": "^2.2.8",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "18.7.13",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "dotenv": "^16.0.1",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
-    "typescript": "4.7.4"
+    "typescript": "4.8.2"
   }
 }
